[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level editor/level settings.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/coding_theme.tres" type="Theme" id=2]

[node name="level settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1923.0
margin_bottom = 1077.0
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_bottom = 46.0
alignment = 1

[node name="backButton" type="Button" parent="HBoxContainer"]
margin_right = 245.0
margin_bottom = 46.0
text = "Back to menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -195.5
margin_right = 424.0
margin_bottom = 195.5

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 848.0
margin_bottom = 40.0
text = "Level settings"
align = 1
valign = 1

[node name="Control" type="Control" parent="VBoxContainer2"]
margin_top = 44.0
margin_right = 848.0
margin_bottom = 44.027
rect_min_size = Vector2( 0, 0.027 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 848.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_right = 422.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Level Title"

[node name="levelTitle" type="TextEdit" parent="VBoxContainer2/HBoxContainer"]
margin_left = 426.0
margin_right = 848.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 92.0
margin_right = 848.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 422.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Level description"

[node name="LevelDescription" type="TextEdit" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 426.0
margin_right = 848.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Slider Settings" type="Label" parent="VBoxContainer2"]
margin_top = 136.0
margin_right = 848.0
margin_bottom = 176.0
text = "Tutorial Slide"
align = 1
valign = 1

[node name="Control2" type="Control" parent="VBoxContainer2"]
margin_top = 180.0
margin_right = 848.0
margin_bottom = 180.027
rect_min_size = Vector2( 0, 0.027 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 184.0
margin_right = 848.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer3"]
margin_right = 422.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Slide Title"

[node name="sliderTitle" type="TextEdit" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 426.0
margin_right = 848.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 228.0
margin_right = 848.0
margin_bottom = 268.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer4"]
margin_right = 422.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Slide Content"

[node name="slideContent" type="TextEdit" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 426.0
margin_right = 848.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -330.0
margin_top = -76.0
text = "Next"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="HBoxContainer/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
